--- a/roles/sec/tasks/main.yml
+++ b/roles/sec/tasks/main.yml
@@ -1,24 +1,121 @@
+#!/bin/bash
+#
+# [Ansible Role]
+#
+# GitHub:   https://github.com/Admin9705/PlexGuide.com-The-Awesome-Plex-Server
+# Author:   Admin9705 & Deiteq & FlickerRate
+# URL:      https://plexguide.com
+#
+# PlexGuide Copyright (C) 2018 PlexGuide.com
+# Licensed under GNU General Public License v3.0 GPL-3 (in short)
+#
+#   You may copy, distribute and modify the software as long as you track
+#   changes/dates in source files. Any modifications to our software
+#   including (via compiler) GPL-licensed code must also be made available
+#   under the GPL along with build & install instructions.
+#
+#################################################################################
 ---
-- name: Include OS-specific variables.
-  include_vars: "{{ ansible_os_family }}.yml"
+- include_vars: variables.yml
 
-# Fail2Ban
-- include_tasks: fail2ban-RedHat.yml
-  when: ansible_os_family == 'RedHat' and security_fail2ban_enabled
+- include_role:
+    name: pgmstart
 
-- include_tasks: fail2ban-Debian.yml
-  when: ansible_os_family == 'Debian' and security_fail2ban_enabled
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "complete_dir = Downloads/complete"
+    replace: "complete_dir = /complete"
+  when: sabnzbd_ini.stat.exists == False
 
-- name: Ensure fail2ban is running and enabled on boot.
-  service: name=fail2ban state=started enabled=yes
-  when: security_fail2ban_enabled
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "host_whitelist ="
+    replace: "host_whitelist = sabnzbd.{{domain.stdout}},"
+  when: sabnzbd_ini.stat.exists == False
 
-# SSH
-- include_tasks: ssh.yml
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "download_dir = Downloads/incomplete"
+    replace: "download_dir = /incomplete"
+  when: sabnzbd_ini.stat.exists == False
 
-# Autoupdate
-- include_tasks: autoupdate-RedHat.yml
-  when: ansible_os_family == 'RedHat' and security_autoupdate_enabled
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: nzb_backup_dir = ""
+    replace: "nzb_backup_dir = /nzb"
+  when: sabnzbd_ini.stat.exists == False
 
-- include_tasks: autoupdate-Debian.yml
-  when: ansible_os_family == 'Debian' and security_autoupdate_enabled
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "admin_dir = admin"
+    replace: "admin_dir = /admin"
+  when: sabnzbd_ini.stat.exists == False
+
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "direct_unpack = 0"
+    replace: "direct_unpack = 1"
+  when: sabnzbd_ini.stat.exists == False
+
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "ignore_samples = 0"
+    replace: "ignore_samples = 1"
+  when: sabnzbd_ini.stat.exists == False
+
+## remove unwanted extensions
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "unwanted_extensions = ,"
+    replace: "unwanted_extensions = exe, com, bat, sh"
+  when: sabnzbd_ini.stat.exists == False
+
+## ignore and cleanup the following files
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "cleanup_list = ,"
+    replace: "cleanup_list = nfo, exe, com, bat, txt, doc, xls, xlxs, docx, doc, jpg, jeg, gif, png"
+  when: sabnzbd_ini.stat.exists == False
+
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "action_on_unwanted_extensions = 0"
+    replace: "action_on_unwanted_extensions = 2"
+  when: sabnzbd_ini.stat.exists == False
+
+## aborts encrypted rar rather than pausing
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "pause_on_pwrar = 1"
+    replace: "pause_on_pwrar = 2"
+  when: sabnzbd_ini.stat.exists == False
+
+## try a new nzb if it fails
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "new_nzb_on_failure = 0"
+    replace: "new_nzb_on_failure = 1"
+  when: sabnzbd_ini.stat.exists == False
+
+## replace dots with space
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "replace_dots = 0"
+    replace: "replace_dots = 1"
+  when: sabnzbd_ini.stat.exists == False
+
+## flat_unpack
+- replace:
+    path: /opt/appdata/sabnzbd/sabnzbd.ini
+    regexp: "flat_unpack = 0"
+    replace: "flat_unpack = 1"
+  when: sabnzbd_ini.stat.exists == False
+
+- name: Restart Container
+  docker_container:
+    name: sabnzbd
+    state: started
+  when: sabnzbd_ini.stat.exists == False
+
+- include_role:
+    name: pgmend
