--- a/roles/sec/tasks/main.yml
+++ b/roles/sec/tasks/main.yml
@@ -18,5 +18,5 @@
 ---
 - replace:
     path: "/opt/plexguide/roles/secbase/defaults/main.yml"
-    regexp: "security_ssh_port: 2200"
+    regexp: "^security_ssh_port:\ \d{4}"
     replace: "security_ssh_port: 1800"
